# ADDINS.PNNL.POSITRON

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  =.save  =.save.1  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  Dockerfile  GITHUB_REPO_READY.md  GITHUB_SETUP.md  HOW_TO_START.md  IMPLEMENTATION_SUMMARY.md  PUSH_TO_GITHUB.sh  QUICKSTART.md  README.docker.md  README.md  SESSION_NOTES.md  TROUBLESHOOTING_GUIDE.md  USER_GUIDE.md  docker-compose.yml  docker-entrypoint.sh
.claude/: settings.local.json
.devcontainer/: README.md  devcontainer.json
docs/: POSITRON_SETUP_GUIDE.md  QUICK_START.md
examples/: .Renviron.template  .Rprofile  .Rprofile.template  sandbox.config.json
sandbox-switcher/: package-lock.json  package.json  sandbox-switcher-0.1.0.vsix  sandbox-switcher.vsix
sandbox-switcher/src/: extension.ts
sandbox-switcher/src/commands/: addDataRoot.ts  revealPairedFolder.ts  switchWdOpposite.ts  syncNow.ts
sandbox-switcher/src/config/: renviron.ts  sandbox.ts
sandbox-switcher/src/utils/: cli.ts  state.ts  terminal.ts  ui.ts
sandbox-sync/: Cargo.toml
sandbox-sync/src/: cli.rs  filter.rs  lib.rs  main.rs  output.rs  paths.rs  sync.rs  walk.rs  watch.rs
scripts/: build-all.sh  dev-setup.sh  test-all.sh  test-sync.sh
