[package]
name = "sandbox-sync"
version = "0.1.0"
edition = "2021"
authors = ["PNNL Development Team"]
description = "Fast directory structure synchronization tool for R sandbox workflows"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
notify = "6.1"
ignore = "0.4"
jwalk = "0.8"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
globset = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "sandbox-sync"
path = "src/main.rs"
