[package]
name = "sandbox-sync"
version = "0.1.0"
edition = "2021"
authors = ["PNNL Development Team"]
description = "Fast directory structure synchronization tool for R sandbox workflows"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
pathdiff = "0.2"
dunce = "1.0"
cfg-if = "1.0"
ignore = "0.4"
globset = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[lib]
name = "sandbox_sync"
path = "src/lib.rs"

[[bin]]
name = "sandbox-sync"
path = "src/main.rs"
